# fri_examples

./: CMakeLists.txt  README.md  fri_examples-gnulinux.pc  manifest.xml
include/: CMakeLists.txt  friExample.hpp  friExampleAbstract.hpp  friExampleCartesianPosReader.hpp  friExampleJointReader.hpp  friRTNetExampleAbstract.hpp
script/: friISIR.src  krl.src  resetSTIFFNESS.src
src/: CMakeLists.txt  friExample.cpp  friExampleAbstract.cpp  friExampleCartesianPosReader.cpp  friExampleJointReader.cpp  friRTNetExampleAbstract.cpp
tests/: CMakeLists.txt  friExample.ops  friExampleKinematic.ops  jointReader.ops
tests/include/: ATIcalibration-component.hpp  demoKukaKinectKarama-rtnetcomponent.hpp  friExample.hpp  friExampleJacobianRTNet.hpp  friExampleTorque.hpp
tests/orocos/: ATIcalibration.ops  Demo_disposvel02start-rtnet.ops  friExample.ops  friExampleJacobianRTNet.ops  friExampleTorque.ops  friExampleTorqueRTNet.ops
tests/src/: ATIcalibration-component.cpp  demoKukaKinectKarama-rtnetcomponent.cpp  friExample.cpp  friExampleJacobian.cpp  friExampleJacobianRTNet.cpp  friExampleKinematic.cpp  friExampleTorque.cpp  friExampleTorqueRTNet.cpp
